--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "lint": "eslint \"src/**/*.ts\"",
     "lint:fix": "eslint \"src/**/*.ts\" --fix",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "check:resolver": "node scripts/check-resolver.js"
   },
   "dependencies": {
     "@1inch/byte-utils": "^3.1.0",
