--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,8 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^5.0.4",
     "typescript": "^5.6.2",
     "vite": "^5.4.2"
   }
 }
-
-
