--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@cosmjs/encoding": "^0.32.3",
+    "@cosmjs/cosmwasm-stargate": "^0.32.3",
+    "@cosmjs/stargate": "^0.32.3",
+    "@cosmjs/proto-signing": "^0.32.3",
+    "long": "^5.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
